--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <!--
     Auteur : Jérémy Mouzin (www.javascriptdezero.com)
     Twitter : https://twitter.com/jeremymouzin
